# sample_glue_pipelines

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
glue_scripts/: etl_job.py  shell_job.py
sample_pipelines/: driver.py
sample_pipelines/traffic/: analytics.py  raw.py  stage.py
sample_pipelines/utils/: s3.py
tests/: conftest.py
tests/data/raw/sample/austin_traffic/: data.csv
tests/sample_pipelines/: driver_test.py
tests/sample_pipelines/traffic/: analytics_test.py  raw_test.py  stage_test.py
tf/modules/buckets/: main.tf  outputs.tf
tf/modules/deploy/: main.tf  vars.tf
tf/modules/deploy/policies/: deploy_policy.json.tpl
tf/modules/etl_job/: main.tf  vars.tf
tf/modules/glue/: crawler_policy.json.tpl  main.tf  outputs.tf  policy.json.tpl  vars.tf
tf/modules/glue/policies/: crawler_policy.json.tpl  policy.json.tpl
tf/modules/pipelines/: main.tf  vars.tf
tf/modules/pipelines/austin_traffic/: main.tf  vars.tf
tf/modules/shell_job/: main.tf  vars.tf
tf/pipelines/: main.tf
tf/pipelines/austin_traffic/: main.tf  vars.tf
tf/test/: main.tf
