[tool.poetry]
name = "sample_pipelines"
version = "0.1.0"
description = ""
authors = ["Kurtis Seebaldt <kurtis@thisisartium.com>"]
readme = "README.md"
packages = [{include = "sample_pipelines"}]

[tool.poetry.dependencies]
python = "^3.7"
smart-open = "^6.1.0"
requests = "^2.28.1"
h3 = "^3.7.4"
Shapely = "^1.8.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
moto = {extras = ["s3"], version = "^4.0.2"}
requests-mock = "^1.10.0"
chispa = "^0.9.2"
python-dateutil = "^2.8.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    'ignore:.*SparkSession.builder.getOrCreate.*:DeprecationWarning',
]

[tool.isort]
profile = "black"
